views in author and publisher

--- a/code/src/main/webapp/WEB-INF/layouts/views.xml
+++ b/code/src/main/webapp/WEB-INF/layouts/views.xml
@@ -5,9 +5,32 @@
 <tiles-definitions>
 
 	<definition name="home" extends="DefaultTemplate">
-	    <put-attribute name="body"	value="/WEB-INF/views/home.jsp" />
+		<put-attribute name="body" value="/WEB-INF/views/home.jsp" />
 	</definition>
 
+	<definition name="Publisher/listPublisher" extends="DefaultTemplate">
+		<put-attribute name="body" value="/WEB-INF/views/Publisher/listPublisher.jsp" />
+	</definition>
 	
+	<definition name="Publisher/addPublisher" extends="DefaultTemplate">
+		<put-attribute name="body" value="/WEB-INF/views/Publisher/addPublisher.jsp" />
+	</definition>
 	
+	<definition name="Author/addAuthor" extends="DefaultTemplate">
+		<put-attribute name="body" value="/WEB-INF/views/Author/addAuthor.jsp" />
+	</definition>
+	
+	<definition name="Author/listAuthor" extends="DefaultTemplate">
+		<put-attribute name="body" value="/WEB-INF/views/Author/listAuthor.jsp" />
+	</definition>
+	
+	<definition name="Author/updateAuthor" extends="DefaultTemplate">
+		<put-attribute name="body" value="/WEB-INF/views/Author/updateAuthor.jsp" />
+	</definition>
+	
+	<definition name="Publisher/updatePublisher" extends="DefaultTemplate">
+		<put-attribute name="body" value="/WEB-INF/views/Author/updatePublisher.jsp" />
+	</definition>
+
+
 </tiles-definitions>
