update page for book

--- a/code/src/main/webapp/WEB-INF/layouts/views.xml
+++ b/code/src/main/webapp/WEB-INF/layouts/views.xml
@@ -16,5 +16,9 @@
 	    <put-attribute name="body"	value="/WEB-INF/views/Book/addBook.jsp" />
 	</definition>
 	
+	<definition name="Book/updateBook" extends="DefaultTemplate">
+	    <put-attribute name="body"	value="/WEB-INF/views/Book/updateBook.jsp" />
+	</definition>
+	
 	
 </tiles-definitions>
