--- a/code/src/main/webapp/WEB-INF/layouts/views.xml
+++ b/code/src/main/webapp/WEB-INF/layouts/views.xml
@@ -41,16 +41,27 @@
 		<put-attribute name="body"
 			value="/WEB-INF/views/Author/updateAuthor.jsp" />
 	</definition>
-	
+
 	<definition name="Book/updateBook" extends="DefaultTemplate">
-	    <put-attribute name="body"	value="/WEB-INF/views/Book/updateBook.jsp" />
+		<put-attribute name="body" value="/WEB-INF/views/Book/updateBook.jsp" />
 	</definition>
-	
-	
+
+
 	<definition name="Publisher/updatePublisher" extends="DefaultTemplate">
 		<put-attribute name="body"
 			value="/WEB-INF/views/Publisher/updatePublisher.jsp" />
 	</definition>
 
+	<definition name="Search/browseBook" extends="DefaultTemplate">
+		<put-attribute name="body"
+			value="/WEB-INF/views/Search/browseBook.jsp" />
+	</definition>
+	
+	
+	<definition name="Search/detailsBook" extends="DefaultTemplate">
+		<put-attribute name="body"
+			value="/WEB-INF/views/Search/detailsBook.jsp" />
+	</definition>
+	
 
 </tiles-definitions>
